# app/modules/restaurants/restaurant.controller.ts
@@ -17,11 +17,19 @@ export const addItem = asyncHandler(async (req: Request, res: Response, next: Ne
   res.send(createResponse(addedMenuItem, "Item added successfully"));
 });
 
-const acceptRejectOrder = asyncHandler(async (req: Request, res: Response, next: NextFunction) => {
-  const data: Payload = req.body;
-  if(!req.user) {
-    throw createHttpError(401, "User not found, please login again");
+export const acceptRejectOrder = asyncHandler(async (req: Request, res: Response, next: NextFunction) => {
+  const orderId = req.params.orderId;
+  const status = req.body.status;
+  const restaurantId = req.params.restaurantId;
+  if (!orderId) {
+    throw createHttpError(400, "Order id is required");
   }
-  const updatedOrder = await restaurantService.acceptRejectOrder(data, req.user.email);
-  res.send(createResponse(updatedOrder, "Order updated successfully"));
+  if (!status) {
+    throw createHttpError(400, "Status is required");
+  }
+  if(status !== "CONFIRMED" && status !== "CENCELED") {
+    throw createHttpError(400, "Invalid status");
+  }
+  const order = await restaurantService.acceptRejectOrder(restaurantId, orderId, status);
+  res.send(createResponse(order, "Order updated successfully"));
 });
