# app/modules/restaurants/restaurant.route.ts
@@ -8,7 +8,7 @@ const router = Router();
 
 router
       .post('/add-item',authMiddlerware.auth, authMiddlerware.isRestaurant, restaurantValidator.addItemValidator, catchError, restaurantController.addItem)
-
+      .post('/accept-reject-order/:restaurantId/:orderId',authMiddlerware.auth, authMiddlerware.isRestaurant, catchError, restaurantController.acceptRejectOrder);
 
 
 export default router;
