# app/swagger/restaurantRoutes.json
@@ -33,7 +33,10 @@
                   "example": true
                 }
               },
-              "required": ["name", "price"]
+              "required": [
+                "name",
+                "price"
+              ]
             }
           }
         }
@@ -160,6 +163,124 @@
                   }
                 ],
                 "message": "Restaurants fetched successfully"
+              }
+            }
+          }
+        },
+        "500": {
+          "description": "Server error",
+          "content": {
+            "application/json": {
+              "example": {
+                "success": false,
+                "error_code": 500,
+                "message": "An unexpected error occurred",
+                "data": {}
+              }
+            }
+          }
+        }
+      }
+    }
+  },
+  "/restaurant/accept-reject-order/{restaurantId}/{orderId}": {
+    "post": {
+      "summary": "Accept or reject an order for a specific restaurant",
+      "tags": [
+        "Restaurants"
+      ],
+      "parameters": [
+        {
+          "name": "restaurantId",
+          "in": "path",
+          "required": true,
+          "description": "The ID of the restaurant",
+          "schema": {
+            "type": "string"
+          }
+        },
+        {
+          "name": "orderId",
+          "in": "path",
+          "required": true,
+          "description": "The ID of the order",
+          "schema": {
+            "type": "string"
+          }
+        }
+      ],
+      "requestBody": {
+        "required": true,
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "enum": [
+                    "CONFIRMED",
+                    "CANCELED"
+                  ],
+                  "description": "Status to update the order with",
+                  "example": "CONFIRMED"
+                }
+              },
+              "required": [
+                "status"
+              ]
+            }
+          }
+        }
+      },
+      "responses": {
+        "200": {
+          "description": "Order updated successfully",
+          "content": {
+            "application/json": {
+              "example": {
+                "success": true,
+                "data": {
+                  "id": "63f21c84e7a51093c507d207",
+                  "status": "CONFIRMED",
+                  "items": [
+                    {
+                      "id": "63f21c84e7a51093c507d203",
+                      "name": "Margherita Pizza",
+                      "price": 12.99
+                    }
+                  ],
+                  "totalAmount": 12.99,
+                  "restaurantId": "63f21c84e7a51093c507d205",
+                  "userId": "63f21c84e7a51093c507d208"
+                },
+                "message": "Order updated successfully"
+              }
+            }
+          }
+        },
+        "400": {
+          "description": "Invalid request parameters",
+          "content": {
+            "application/json": {
+              "example": {
+                "success": false,
+                "error_code": 400,
+                "message": "Order id is required",
+                "data": {}
+              }
+            }
+          }
+        },
+        "404": {
+          "description": "Order not found",
+          "content": {
+            "application/json": {
+              "example": {
+                "success": false,
+                "error_code": 404,
+                "message": "Order not found",
+                "data": {}
               }
             }
           }
